--- a/wedding-01-web/src/main/webapp/static/easyui/css/wedding.css
+++ b/wedding-01-web/src/main/webapp/static/easyui/css/wedding.css
@@ -19,3 +19,71 @@ h2 {
 .demo-tip{
 	display:none;
 }
+
+.ftitle
+{
+    font-size:14px;
+    font-weight:bold;
+    color:#666;
+    padding:5px 0;
+    margin-bottom:20px;
+    border-bottom:1px solid #ccc;
+}
+
+.fitem
+{
+    margin-bottom:15px;
+}
+
+.fitem label
+{
+    display:inline-block;
+    width:90px;
+    text-align:right;
+    vertical-align:top;
+    margin-top:2px;
+}
+.fitem input
+{
+    width:150px;
+    height:auto;
+}
+.fitem select
+{
+    width:150px;
+    height:auto;
+}
+.fitem  textarea
+{
+    width:300px;
+    height:200px;
+}
+
+.searchitem
+{
+    float:left;
+    margin-left:10px;
+    vertical-align:middle;
+    height:auto;
+    margin-top:6px;
+    margin-bottom:6px;
+}
+
+. searchitem  select
+{
+    width:150px;
+    height:auto;
+}
+
+.searchitem input
+{
+    width:100px;
+    height:auto;
+}
+
+.error
+{
+    color:Red;
+    font-size:10px;
+    margin-left:5px;
+}
